# okta-braintrust-sync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  openapi_spec.json  pyproject.toml
braintrust_migrate/: __init__.py  cli.py  client.py  config.py  openapi_utils.py  orchestration.py
braintrust_migrate/resources/: __init__.py  acls.py  agents.py  ai_secrets.py  base.py  datasets.py  experiments.py  functions.py  groups.py  logs.py  project_scores.py  project_tags.py  prompts.py  roles.py  span_iframes.py  views.py
config/examples/: 01-basic-sync.yaml  02-group-assignment.yaml  03-role-project-workflow.yaml  04-attribute-based-groups.yaml  05-hybrid-assignment.yaml  06-multi-org.yaml  complete_workflow_example.yaml  group_assignment_configs.yaml  hybrid.yaml  role_project_configs.yaml  single-org.yaml
config/test-configs/: exclude-groups-test.yaml  filtered-test.yaml  multi-team-test.yaml
config/test-configs/terraform/test-setup/: .env.example  outputs.tf
docs/: configuration-guide.md  environment-setup.md  installation.md
okta-braintrust-sync/: .env.example  .gitignore  API_KEYS_REQUIREMENTS.md  LICENSE  README.md  pyproject.toml
okta-braintrust-sync/config/examples/: declarative-only.yaml  hybrid.yaml
okta-braintrust-sync/config/test-configs/: README.md  basic-test.yaml  exclude-groups-test.yaml  filtered-test.yaml  test-config.yaml
okta-braintrust-sync/sync/: __init__.py  cli.py  version.py
okta-braintrust-sync/sync/audit/: logger.py
okta-braintrust-sync/sync/clients/: base.py  braintrust.py  exceptions.py
okta-braintrust-sync/sync/config/: loader.py
okta-braintrust-sync/sync/core/: executor.py  planner.py
okta-braintrust-sync/sync/resources/: base.py  groups.py  users.py
okta-braintrust-sync/terraform/test-setup/: README.md  main.tf  terraform.tfstate
okta-braintrust-sync/tests/: test_braintrust_client.py  test_cli.py  test_group_syncer.py  test_integration.py  test_integration_e2e.py  test_sync_executor.py  test_sync_planner.py  test_user_syncer.py
scripts/: setup-dev.sh
sync/: cli.py
sync/audit/: logger.py
sync/cli/: __init__.py  app.py  factory.py  formatters.py
sync/clients/: base.py  braintrust.py  okta.py
sync/config/: __init__.py  api_models.py  audit_models.py  base_models.py  deletion_models.py  group_assignment_models.py  loader.py  mode_models.py  models.py  role_project_models.py  sync_models.py
sync/core/: enhanced_state.py  executor.py  planner.py  state.py
sync/resources/: base.py  groups.py  role_project_assignment.py  user_group_assignment.py  users.py
sync/security/: __init__.py  validation.py
terraform/examples/01-basic-teams/: README.md  main.tf
terraform/examples/02-attribute-based/: README.md  main.tf
terraform/examples/03-department-based/: README.md  main.tf
terraform/examples/04-project-lifecycle/: README.md  main.tf
terraform/examples/05-contractor-external/: README.md  main.tf
terraform/examples/06-minimal-startup/: README.md  main.tf
tests/: __init__.py  conftest.py  test_audit_logger.py  test_base_syncer.py  test_integration_simple.py  test_state_manager.py
tests/integration/: test_migration_flow.py
tests/unit/: __init__.py  test_acl_migrator.py  test_client.py  test_config.py  test_excluded_fields.py  test_experiment_dependencies.py  test_function_dependencies.py  test_group_migrator.py  test_openapi_inclusion.py  test_project_score_migrator.py  test_project_tag_migrator.py  test_prompt_dependencies.py  test_role_migrator.py  test_span_iframe_migrator.py  test_view_dependencies.py  test_view_migrator.py
