[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "braintrust-migrate"
version = "0.1.0"
description = "CLI & library for migrating Braintrust organizations with maximum fidelity"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Braintrust Migration Tool", email = "support@braintrust.dev"},
]
keywords = ["braintrust", "migration", "cli", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "braintrust-api>=0.6.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
]

[project.scripts]
braintrust-migrate = "braintrust_migrate.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "UP", "B", "PL", "PT", "RUF", "NPY", "PGH"]
ignore = ["E501", "PLR0913", "PLR0912", "PLR0915"]
fixable = ["ALL"]

[tool.ruff.isort]
known-first-party = ["braintrust_migrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=braintrust_migrate --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["braintrust_migrate"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
] 