[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sync"]

[project]
name = "okta-braintrust-sync"
version = "0.1.0"
description = "Hybrid SCIM-like sync tool for Okta users/groups to Braintrust organizations"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Braintrust Development Team", email = "support@braintrust.dev"},
]
keywords = ["okta", "braintrust", "scim", "sync", "identity", "sso", "webhook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    
    # HTTP clients
    "httpx>=0.25.0",
    "requests>=2.31.0",
    
    # Braintrust integration
    "braintrust-api>=0.6.0",
    
    # Async & concurrency
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.2.0",
    
    # Data handling
    "pyyaml>=6.0.2",
    "jinja2>=3.1.0",
    
    # Webhook server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Queue & storage - removed (not implemented)
    
    # Scheduling
    "apscheduler>=3.10.0",
    "croniter>=2.0.0",
    
    # Security
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "respx>=0.20.0",
    
    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
]

# Docker/container deployment
docker = [
    "gunicorn>=21.2.0",
]

# All extras for development
all = [
    "okta-braintrust-sync[dev,docker]"
]

[project.scripts]
okta-braintrust-sync = "sync.cli:app"

[project.urls]
Homepage = "https://github.com/braintrustdata/okta-braintrust-sync"
Repository = "https://github.com/braintrustdata/okta-braintrust-sync"
Documentation = "https://github.com/braintrustdata/okta-braintrust-sync/blob/main/README.md"
Issues = "https://github.com/braintrustdata/okta-braintrust-sync/issues"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "UP", "B", "PL", "PT", "RUF", "NPY", "PGH", "SIM", "TCH"]
ignore = ["E501", "PLR0913", "PLR0912", "PLR0915", "PLR2004"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.isort]
known-first-party = ["sync"]
force-sort-within-sections = true

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "S106"]
"sync/cli.py" = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=sync",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests with external APIs",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "braintrust_api.*",
    "apscheduler.*",
    "croniter.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["sync"]
omit = [
    "tests/*",
    "sync/version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false